# mythos

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: bench.rs  libs.rs  main.rs  movepicker.rs  search.rs  tables.rs  trans.rs  uci.rs
src/board/: board.rs  lookup.rs  mod.rs  movegen.rs
src/eval/: eval.rs  mobility.rs  mod.rs  pawn.rs  piece_square.rs
src/tests/: perft.rs  perft_bench.epd
src/types/: bitboard.rs  castling.rs  color.rs  mod.rs  move_list.rs  moves.rs  piece.rs  score.rs  square.rs  uninit_array.rs  zobrist.rs
xtask/: Cargo.toml
xtask/books/: openings.epd
xtask/src/: main.rs  menu.rs  sprt.rs  sprt_report.rs  tasks.rs  util.rs  vs_bench.rs
